# libagar

./: .gitignore  CHANGELOG.md  CMakeChecks.cmake  CMakeLists.txt  CODE_OF_CONDUCT.md  CONCEPT  CONTRIBUTING.md  FORMATS  INSTALL  INSTALL.fr  INSTALL.md  INSTALL.txt  LICENSE  LICENSE.ofl  Makefile  Makefile.inc  Makefile.proj  OFL.txt  README  README.md  TODO  TODO.md  TREE  agarConfig.cmake  agarCoreConfig.cmake  begin.h  bug_report.md  close.h  configure  configure.in
ada/core/: LICENSE  Makefile  ag_data_source.c  ag_dso.c  ag_event.c  ag_object.c  agar-classes.ads  agar-config.adb  agar-config.ads  agar-core.types  agar-data_source.adb  agar-data_source.ads  agar-data_source.ads.in  agar-dso.adb  agar-dso.ads  agar-dso.ads.in  agar-error.adb  agar-error.ads  agar-event.adb  agar-event.ads  agar-event.ads.in  agar-init.adb  agar-init.ads  agar-object.adb  agar-object.ads  agar-object.ads.in  agar-timer.adb  agar-timer.ads  agar-timer.ads.in  agar-types.ads  agar.ads  agar_core_ada_prep.def  configure  configure.in  configure.lua
agar-bench/: Makefile  agar-bench.c  agar-bench.h  configure  configure.in  events.c  generic.c  memops.c  misc.c  pixelops.c  primitives.c  sg.c  surfaceops.c  test.h  tests.c
agar-bench/mk/: csoft.common.mk  csoft.den.mk  csoft.doc.mk  csoft.lib.mk  csoft.po.mk
agar-disasm/: Makefile  README  agar-disasm.1  agar-disasm.c  configure  configure.in
agarpaint/: .depend  Makefile  agarpaint.c  agarpaint.h  configure  configure.in
agarpaint/config.windows/: debug.h  have_agar_rg.h  have_agar_vg.h  have_bounded_attribute.h  have_cc_warnings.h  have_format_attribute.h  have_getopt.h  localedir.h  prefix.h  release.h  sharedir.h  version.h
demos/catastrophe/: catastrophe.c  configure.in
demos/glview/: Makefile  configure  configure.in  glview.c
demos/plotting/: Makefile  configure  configure.in  plotting.c
demos/sockets/: Makefile  configure  configure.in  sockets.c
demos/table/: Makefile  configure  configure.in  table.c
demos/themes/: Makefile  README  configure  configure.in  green.acs  mytheme.c  rounded_style.c  themes.c  widgets.c
demos/threads/: Makefile  configure  configure.in  threads.c
mk/libtool/: config.sub  configure  configure.in  ltconfig  ltmain.sh
tests/: CMakeChecks.cmake  CMakeLists.txt  Makefile  Makefile.proj  agartest.1  agartest.c  agartest.h  audio.c  bezier.c  bezier_widget.c  bezier_widget.h  buttons.c  charsets.c  checkbox.c  chinese.c  compositing.c  configsettings.c  configure  configure.in  console.c  customwidget.c  customwidget_mywidget.c  customwidget_mywidget.h  fixedres.c  focusing.c  fonts.c  fontselector.c  fspaths.c  glview.c  imageloading.c  keyevents.c  loader.c  loss.txt  math.c  math_matrix44.h  math_vector3.h  maximized.c  minimal.c  modalwindowhandler.c  network.c  (+30 more)
tests/agaraudio/: agaraudio.c  configure
tests/agarcplusplus/: Makefile  agarcplusplus.cpp  configure
tests/agarevloop/: Makefile  agarevloop.c  configure
tests/agarhello/: INSTALL.txt  Makefile  agarhello.c  configure  configure.in
tests/agarreinit/: Makefile  agarreinit.c  configure  configure.in
tests/agarsdl/: Makefile  agarsdl.c  configure  configure.in
tests/c64hello/: Makefile  Makefile.config  c64hello  configure  configure.in  hello.c
tests/coreonly/: Makefile  configure  configure.in
tests/mk/: csoft.common.mk  csoft.subdir.mk  install-includes.sh  mkconcurrent.pl  mkdep
tools/agarpaint/: Makefile  agarpaint.c  agarpaint.h  configure  configure.in
tools/denuncomp/: Makefile  configure  configure.in
tools/mapedit/: Makefile  configure  configure.in  mapedit.1  mapedit.c  mapedit.h
tools/rgedit/: Makefile  configure  configure.in  rgedit.1  rgedit.c  rgedit.h
tools/sgedit/: Makefile  README  configure  configure.in  sgedit.1  sgedit.c  sgedit.h
tools/skedit/: Makefile  README  configure  configure.in  skedit.1  skedit.c  skedit.h
tools/vgedit/: Makefile  configure  configure.in  vgedit.1  vgedit.c  vgedit.h
trunk/: .gdbinit  CONCEPT  INSTALL  INSTALL.fr  INSTALL.txt  Makefile  Makefile.inc  Makefile.proj  README  TODO  TREE  begin.h  close.h  configure  configure.in
trunk/ChangeLogs/: ChangeLog-1.3.1.txt  ChangeLog-1.3.txt  Release-1.3.1.txt  Release-1.3.2.txt  Release-1.3.4.txt  Release-1.3.txt  Release-1.4.1.txt  Release-1.4.txt  Release-1.5.0.txt
trunk/ada-core/: CHANGES  Makefile  Mkf-deinstall  Mkf-install  Mkf-local  README  VERSION  ada-bind  ada-compile  ag_event.c  ag_object.c  agar-core-ada-conf.c  agar-core-ada.sld  agar-core-config.adb  agar-core-config.ads  agar-core-config.apk  agar-core-data_source.adb  agar-core-data_source.ads  agar-core-database.adb  agar-core-database.apk  agar-core-datasource.adb  agar-core-datasource.ads  agar-core-datasource.apk  agar-core-dso.adb  agar-core-dso.ads  agar-core-dso.apk  agar-core-error.adb  agar-core-error.apk  agar-core-event.adb  agar-core-event.ads  agar-core-file.adb  agar-core-init.adb  agar-core-init.ads  agar-core-limits.ads.mff  agar-core-object.adb  agar-core-object.ads  agar-core-object.ads.txt  agar-core-object.sh  agar-core-thin.ads.mff  agar-core-thin.apk  (+42 more)
trunk/ada-demos/: Makefile  README  cc-compile  cc-link  cc-slib  conf-adacomp  demo.adb  demo.ads  gnat.adc  slider.adb  slider_callbacks.apk  winicon_callbacks.apk
trunk/ada-gui/: CHANGES  Makefile  TODO  ag_button.c  ag_label.c  ag_scrollbar.c  ag_surface.c  ag_text.c  ag_widget.c  ag_window.c  agar-gui-ada-conf.c  agar-gui-ada.sld  agar-gui-colors.adb  agar-gui-draw.adb  agar-gui-draw.apk  agar-gui-pixelformat.ads  agar-gui-style.ads  agar-gui-surface.adb  agar-gui-surface.ads  agar-gui-text.adb  agar-gui-text.ads  agar-gui-text.ads.txt  agar-gui-types.ads  agar-gui-unit.adb  agar-gui-view.adb  agar-gui-view.ads  agar-gui-widget-box.adb  agar-gui-widget-box.ads  agar-gui-widget-button.adb  agar-gui-widget-button.ads  agar-gui-widget-checkbox.adb  agar-gui-widget-checkbox.ads  agar-gui-widget-checkbox.apk  agar-gui-widget-combo.adb  agar-gui-widget-combo.ads  agar-gui-widget-console.adb  agar-gui-widget-console.ads  agar-gui-widget-editable.ads  (+77 more)
trunk/au/: AU.3  (+12 more)
(+5674 files in other folders)
